--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,66 +1,68 @@
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "好聚", root_path, :class => "navbar-brand" %>
-    </div>
+<nav class="navbar navbar-default" role="navigation" style="margin-left:-15px;margin-right:-15px;">
+  <div class="col-md-offset-2 col-md-8">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "好聚", root_path, :class => "navbar-brand" %>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "找聚會", find_meetup_path("all") %></li>
-        <li><%= link_to "辦聚會", new_admin_meetup_path %></li>
-        <!--
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-        -->
-      </ul>
-      <!--
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      -->
-      <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
-          <li><%= link_to current_user.email, '/info/'+current_user.uid %></li>
-          <li>
-            <%= link_to '/info/'+current_user.uid, style: "padding: 0px;margin-top:10px;" do %>
-              <%= image_tag current_user.thumbnail, width: "30px" %>
-            <% end %>
-          </li>
-          <%= render 'layouts/admin_menu' %>
-        <% else %>
-          <li><a style="padding-right: 0px;">用Google一鍵登入></a></li>
-          <li>
-            <%= link_to user_omniauth_authorize_path(:google_oauth2) do %>
-              <%= image_tag 'Google_icon.png', width: "25px", style: "margin-top: -10px;" %>
-            <% end %>
-          </li>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><%= link_to "找聚會", find_meetup_path("all") %></li>
+          <li><%= link_to "辦聚會", new_admin_meetup_path %></li>
           <!--
-          <li><%= link_to "登入", new_user_session_path %></li>
-          <li><%= link_to "註冊", new_user_registration_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
           -->
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+        </ul>
+        <!--
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        -->
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+            <li><%= link_to current_user.email, '/info/'+current_user.uid %></li>
+            <li>
+              <%= link_to '/info/'+current_user.uid, style: "padding: 0px;margin-top:10px;" do %>
+                <%= image_tag current_user.thumbnail, width: "30px" %>
+              <% end %>
+            </li>
+            <%= render 'layouts/admin_menu' %>
+          <% else %>
+            <li><a style="padding-right: 0px;">用Google一鍵登入></a></li>
+            <li>
+              <%= link_to user_omniauth_authorize_path(:google_oauth2) do %>
+                <%= image_tag 'Google_icon.png', width: "25px", style: "margin-top: -10px;" %>
+              <% end %>
+            </li>
+            <!--
+            <li><%= link_to "登入", new_user_session_path %></li>
+            <li><%= link_to "註冊", new_user_registration_path %></li>
+            -->
+          <% end %>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </div>
 </nav>
