--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,10 @@
+<% content_for :head do %>
+  <meta property="og:image" content="<%= @meetup.cover.url %>" >
+  <meta property="og:url" content="http://www.adjudge.com" /> 
+  <meta property="og:title" content="Ads Worth Spreading" />
+  <meta property="og:description" content="Ad Judge" />
+<% end %>
+
 <h1 class="text-center"><%= @event.subject %></h1>
 <h2 class="text-center"><%= link_to @meetup.title, meetup_path(@meetup) %>的活動</h2>
 <div class="row">
