--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
   <meta property="og:image" content="<%= @meetup.cover.url %>" >
-  <meta property="og:url" content="http://howtomeet.herokuapp.com" /> 
+  <meta property="og:url" content="https://howtomeet.herokuapp.com" /> 
   <meta property="og:title" content="<%= @event.subject %>" />
   <meta property="og:description" content="<%= @event.content %>" />
 <% end %>
